# molekulo

./: .gitignore  CMakeLists.txt  README.md  copyright.txt  include_copyright.sh  tolerance.h  utility.cpp  utility.h
chem/: CMakeLists.txt
chem/data/: elements.txt  elements_nist.txt
chem/include/chem/: atom.h  bond.h  element.h  ielement.h  inuclide.h  molecule.h  nuclide.h  periodic_table.h  proper_rotation.h  reflection.h  symmetry_operation.h
chem/src/: CMakeLists.txt  atom.cpp  bond.cpp  element.cpp  molecule.cpp  nuclide.cpp  periodic_table.cpp  proper_rotation.cpp  reflection.cpp
chem/test/: CMakeLists.txt  test_atom.cpp  test_molecule.cpp  test_periodic_table.cpp  test_proper_rotation.cpp
formats/: CMakeLists.txt
formats/include/formats/: constants.h  inp_file.h  job_reader.h  job_sp_reader.h  molecule_file.h  molecule_reader.h  mp2_reader.h  multi_molecule_job.h  out_file.h  reader.h  scf_reader.h  section_reader.h  text_file.h
formats/include/formats/dalton/: dalton_cartesian_coordinates_reader.h  dalton_coupled_cluster_section_reader.h  dalton_dal_entry.h  dalton_dal_entry_module_reader.h  dalton_dal_entry_reader.h  dalton_dal_entry_submodule_reader.h  dalton_dal_file.h  dalton_job_sp_reader.h  dalton_mol_entry.h  dalton_mol_entry_reader.h  dalton_mol_file.h  dalton_mp2_reader.h  dalton_out_file.h  dalton_scf_reader.h  dalton_symmetry_independent_centres_reader.h
formats/include/formats/gaussian/: gaussian_cartesian_orientation_reader.h  gaussian_job_sp_reader.h  gaussian_mp2_reader.h  gaussian_out_file.h  gaussian_scf_reader.h
formats/src/: CMakeLists.txt  constants.cpp  inp_file.cpp  job_reader.cpp  job_sp_reader.cpp  molecule_file.cpp  mp2_reader.cpp  out_file.cpp  reader.cpp  scf_reader.cpp  section_reader.cpp  text_file.cpp
formats/src/dalton/: dalton_cartesian_coordinates_reader.cpp  dalton_coupled_cluster_section_reader.cpp  dalton_dal_entry.cpp  dalton_dal_entry_module_reader.cpp  dalton_dal_entry_reader.cpp  dalton_dal_entry_submodule_reader.cpp  dalton_dal_file.cpp  dalton_job_sp_reader.cpp  dalton_mol_entry.cpp  dalton_mol_entry_reader.cpp  dalton_mol_file.cpp  dalton_mp2_reader.cpp  dalton_out_file.cpp  dalton_scf_reader.cpp  dalton_symmetry_independent_centres_reader.cpp
formats/src/gaussian/: gaussian_cartesian_orientation_reader.cpp  gaussian_job_sp_reader.cpp  gaussian_mp2_reader.cpp  gaussian_out_file.cpp  gaussian_scf_reader.cpp
formats/test/: CMakeLists.txt  test_chem_file.cpp  test_dalton_cartesian_coordinates_reader.cpp  test_dalton_coupled_cluster_section_reader.cpp  test_dalton_dal_entry_reader.cpp  test_dalton_dal_file.cpp  test_dalton_mol_entry_reader.cpp  test_dalton_mol_file.cpp  test_dalton_out_file.cpp  test_dalton_scf_reader_diis.cpp  test_dalton_scf_reader_qc.cpp  test_gaussian_cartesian_orientation_reader.cpp  test_gaussian_scf_reader_diis.cpp  test_gaussian_scf_reader_qc.cpp  test_util.cpp  test_util.h
formats/test/data/: dalton_coupled_cluster_section_water_cc2.h  dalton_coupled_cluster_section_water_cc3.h  dalton_coupled_cluster_section_water_cc_2.h  dalton_coupled_cluster_section_water_cc_3.h  dalton_coupled_cluster_section_water_cc_t.h  dalton_coupled_cluster_section_water_ccd.h  dalton_mol_entry_energy_corehole__1_energy_corehole_ref.h  dalton_mol_entry_energy_restart_scf_ref.h  dalton_mol_entry_reader_aba_prop_file_ref.h  dalton_mol_entry_reader_cc2_r12_aux_ch4_a2_ref.h  dalton_mol_entry_water.h  dalton_mol_entry_water_gen.h  dalton_mol_entry_water_nosymm.h  gaussian_qc_scf_water_b3lyp.h
formats/test/data/dalton/scf/diis/: aba_prop_file_ref.h  cc2_r12_aux2_bh_a2_ref.h  cc2_r12_aux_benzene_sym_fop_ref.h  cc2_r12_aux_ch4_a2_ref.h  cc2_r12_aux_h2o_a2_ref.h  cc2_r12_aux_n2_gamma2_ref.h  coronene_hf.h  water_b3lyp.h  water_hf.h  water_hf_not_converged.h
formats/test/data/dalton/scf/qc/: cc3_CARBON_asym_pol_ref.h  cc3_HF_631G_2hyp_ref.h  cc3_HF_ccpVDZ_asym_pol_ref.h  coronene_hf.h  water_b3lyp.h  water_hf.h  water_hf_not_converged.h
formats/test/data/gaussian/cartesian_orientation/: coronene_input.h  coronene_standard.h  water_input.h  water_standard.h
formats/test/data/gaussian/scf/diis/: coronene_hf.h  test000.h  test001.h  test002.h  test004.h  test005.h  test007.h  test008.h  test009.h  test010.h  water_b3lyp.h  water_hf.h  water_hf_nodiis.h  water_hf_not_converged.h
formats/test/data/gaussian/scf/qc/: coronene_hf.h  test018.h  test045.h  test110.h  test117.h  test118.h  test130.h  test131.h  water_b3lyp.h  water_hf.h  water_hf_not_converged.h
io/: CMakeLists.txt
io/include/io/: input_file_stream.h  input_stream.h  input_string_stream.h  logger.h  not_found_exception.h  not_implemented_exception.h  regexes.h  wrong_format_exception.h
io/src/: CMakeLists.txt  input_file_stream.cpp  input_file_stream_p.h  input_stream.cpp  input_stream_p.h  input_string_stream.cpp  input_string_stream_p.h  not_found_exception.cpp  not_implemented_exception.cpp  regexes.cpp  wrong_format_exception.cpp
io/test/: CMakeLists.txt  test_input_file_stream.cpp  test_input_string_stream.cpp
molekulo/: CMakeLists.txt
molekulo/src/: CMakeLists.txt  about_dialog.cpp  about_dialog.h  about_dialog.ui  dal_file_window.cpp  dal_file_window.h  dal_file_window.ui  icons.qrc  images.qrc  jobs_panel.cpp  jobs_panel.h  jobs_panel.ui  main.cpp  molecule_window.cpp  molecule_window.h  molecule_window.ui  multi_molecule_job_toolbar.cpp  multi_molecule_job_toolbar.h  multi_molecule_job_toolbar.ui  multistep_toolbar.qrc  viewer_settings_dialog.cpp  viewer_settings_dialog.h  viewer_settings_dialog.ui
molekulo/src/render/: char_renderer.cpp  char_renderer.h  color.cpp  color.h  cone.cpp  cone.h  constants.h  cylinder.cpp  cylinder.h  gl.h  glu.h  painter.cpp  painter.h  primitive.cpp  primitive.h  sphere.cpp  sphere.h  text_renderer.cpp  text_renderer.h  viewer.cpp  viewer.h
qglviewer/: CMakeLists.txt
qglviewer/include/qglviewer/: qglviewer.h  vec.h
qglviewer/src/: CMakeLists.txt  qglviewer.cpp
